fix(search results): :lipstick: fix load more alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,9 @@
   .tag {
     @apply border border-primary-500 font-body text-tag text-primary-500 hover:bg-primary-500 hover:text-white hover:transition-colors focus:outline-none focus:ring-2 focus:border-primary-500 focus:ring-primary-500 focus:ring-inset duration-300;
   }
+  .btn-primary {
+    @apply text-button text-black bg-primary-500 hover:transition-colors hover:bg-primary-400 rounded-full focus:outline-none focus:ring-2 focus:ring-inset duration-300 focus:border-white focus:ring-white;
+  }
 }
 
 @layer utilities {
